--- a/vpn.env.example
+++ b/vpn.env.example
@@ -4,20 +4,12 @@
 VPN_IPSEC_PSK=your_ipsec_pre_shared_key
 VPN_USER=your_vpn_username
 VPN_PASSWORD=your_vpn_password
-
-# (*Optional*) Define additional VPN users
-# - Uncomment and replace with your own values
-# - DO NOT put "" or '' around values, or add space around =
-# - Usernames and passwords must be separated by spaces
-# VPN_ADDL_USERS=additional_username_1 additional_username_2
-# VPN_ADDL_PASSWORDS=additional_password_1 additional_password_2
-
-# (*Optional*) Use alternative DNS servers
-# - Uncomment and replace with your own values
-# - By default, clients are set to use Google Public DNS
-# - Example below shows Cloudflare's DNS service
-# VPN_DNS_SRV1=1.1.1.1
-# VPN_DNS_SRV2=1.0.0.1
+VPN_LEFT_NAME=your.left.side.com
+VPN_LEFT_IP_SUBNET=192.168.1.0/24
+VPN_RIGHT_NAME=your.right.side.com
+VPN_RIGHT_IP_SUBNET=192.168.2.0/24
 
 # (*Optional*) Advanced users can set up IKEv2. See:
 # https://git.io/ikev2docker
+
+
